2008-03-22  Jürg Billeter  <j@bitron.ch>

	* ccode/valaccodedeclaration.vala, gobject/valaccodegenerator.vala:
	  use extern appropriately for static fields,
	  based on patch by Daniel Silverstone, fixes bug 523768

2008-03-22  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y: fix source reference of fields,
	  patch by Daniel Silverstone, fixes bug 523761

2008-03-22  Jürg Billeter  <j@bitron.ch>

	* vala/valascope.vala, vala/valasemanticanalyzer.vala,
	  vala/valasymbol.vala: check accessiblity of parameter and return
	  types, fixes bug 433290

2008-03-21  Jürg Billeter  <j@bitron.ch>

	* vapi/Makefile.am, vapi/sdl-gfx.vapi, vapi/sdl-image.vapi,
	  vapi/sdl-mixer.vapi, vapi/sdl-ttf.vapi, vapi/sdl.vapi: add SDL
	  bindings, patch by Levi Bard, fixes bug 522940

2008-03-21  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: report error when trying to
	  declare private construct properties,
	  patch by Daniel Silverstone, fixes bug 522685

2008-03-21  Jürg Billeter  <j@bitron.ch>

	* vala/valaenum.vala, vala/valaenumvalue.vala,
	  vala/valainterfacewriter.vala, gobject/valaccodegenerator.vala,
	  gobject/valaccodegeneratorinterface.vala,
	  vapigen/valagidlparser.vala: register enums with GType,
	  patch by Marc-André Lureau, fixes bug 517294

2008-03-21  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gio-2.0/: fix g_file_copy, g_file_copy_async, and
	  g_file_move bindings, fixes bug 523544

	* vapi/gio-2.0.vapi: regenerated

2008-03-21  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: fix g_shell_parse_argv binding,
	  fixes bug 523277

2008-03-21  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: fix g_mutex_trylock binding, fixes bug 523086

2008-03-21  Jürg Billeter  <j@bitron.ch>

	* vapi/Makefile.am, vapi/gnome-keyring-1.vapi,
	  vapi/packages/gnome-keyring-1/: add GNOME Keyring bindings,
	  patch by Andrea Del Signore, fixes bug 522646

2008-03-20  Jürg Billeter  <j@bitron.ch>

	* vala/valainterface.vala, vala/valainterfacewriter.vala,