@@ -1,5 +1,10 @@
 2008-03-22  Jürg Billeter  <j@bitron.ch>
 
+	* vala/parser.y, vala/valanamespace.vala: support nested namespaces,
+	  fixes bug 516584
+
+2008-03-22  Jürg Billeter  <j@bitron.ch>
+
 	* ccode/valaccodedeclaration.vala, gobject/valaccodegenerator.vala:
 	  use extern appropriately for static fields,
 	  based on patch by Daniel Silverstone, fixes bug 523768
